replace media queries for bootstrap classes, correct alignment in columns 1 and 3

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   overflow-x: hidden;
   font-size: 15px;
   line-height: 20px;
-  margin: 0 20px 0 20px;
 }
 
 body > .container {
@@ -16,11 +15,6 @@ body > .container {
 }
 
 /* navbar */
-header {
-  background-color: red;
-  padding: 20px;
-}
-
 .date {
   font: 16px/34px "Roboto Condensed", sans-serif;
   color: white;
@@ -41,26 +35,24 @@ header {
 .nw-logo path {
   fill: white;
 }
+.red {
+  background-color: red;
+}
 
 .btn-1 {
-  box-sizing: border-box;
-  cursor: pointer;
-  text-transform: uppercase;
   font-size: 18px;
-  padding: 0;
-  margin-right: 10px;
 }
 
 .btn-2 {
   background-color: #ffe400;
   color: #000;
-  font-size: 18px;
-  padding-top: 0;
-  padding-bottom: 0;
+  font-size: 12px;
 }
 
 .ham-fa {
-  display: none;
+  color: #f4f5f6a9;
+  display: inline-block;
+  font-size: 24px;
 }
 
 .bottom-nav {
@@ -190,67 +182,27 @@ header {
   top: -20px;
 }
 
+.signup-wrapper p {
+  font-size: 13px;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
 .signup-img {
-  width: 50px;
+  width: 80px;
   margin-right: 10px;
-  height: 30px;
+  height: 50px;
   background-color: red;
 }
 
-@media only screen and (min-width: 992px) {
-  body {
-    margin: 0;
-  }
-
-  .btn-2 {
-    font-size: small;
-  }
-
-  .ham-fa {
-    font-size: 30px;
-    margin-left: 10px;
-    color: #f4f5f6a9;
-    display: inline;
-  }
-
-  .pro-fa {
-    display: none !important;
-  }
-}
-
 @media only screen and (max-width: 768px) {
-  .pro-fa {
-    display: none;
-  }
-
   .nw-logo {
     width: 400px;
-  }
-
-  .btn-2 {
-    font-size: 12px;
-    width: 110px;
-    padding: 5px;
   }
 }
 
 @media only screen and (max-width: 575px) {
-  body {
-    margin: 0;
-  }
-
-  .btn-1 {
-    display: none;
-  }
-
-  .btn-2 {
-    font-size: 12px;
-    width: 110px;
-    padding: 5px;
-  }
-
   .ham-fa {
-    font-size: 30px;
+    font-size: 20px;
     color: #f4f5f6a9;
     display: inline;
   }
